--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=MFRC522
-version=1.3.6
+version=2.0.0
 author=GithubCommunity
-maintainer=miguelbalboa
-sentence=Arduino RFID Library for MFRC522 (SPI)
-paragraph=Read/Write a RFID Card or Tag using the ISO/IEC 14443A/MIFARE interface.
+maintainer=Sleepychord
+sentence=Arduino RFID Library for MFRC522 (SPI) and PBOC
+paragraph=Read/Write a RFID Card or Tag using the ISO/IEC 14443A/MIFARE interface. Support PBOC card.
 category=Communication
-url=https://github.com/miguelbalboa/rfid
+url=https://github.com/Sleepychord/pboc-arduino
 architectures=avr,STM32F1,teensy,esp8266
